--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -33,7 +33,9 @@
 			"extensions": [
 				"-ms-python.autopep8",
 				"-dbaeumer.vscode-eslint",
-				"charliermarsh.ruff"
+				"charliermarsh.ruff",
+				"njpwerner.autodocstring",
+				"christian-kohler.path-intellisense"
 			],
 			"settings": {
 				"[python]": {
