--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,9 @@
 name = "h2o-sqw-calc"
 version = "0.1.0"
 description = "Add your description here"
+authors = [
+    { name = "Haoran Jiang", email = "jianghr@ihep.ac.cn" },
+]
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
@@ -11,7 +14,16 @@ dependencies = [
     "scipy>=1.16.1",
 ]
 
-[project.optional-dependencies]
-test = [
+[project.scripts]
+sqw = "h2o_sqw_calc.main:main"
+plot_fft = "h2o_sqw_calc.main:plot_fft"
+plot_gamma = "h2o_sqw_calc.main:plot_gamma"
+
+[build-system]
+requires = ["uv_build>=0.8.10,<0.9.0"]
+build-backend = "uv_build"
+
+[dependency-groups]
+dev = [
     "coverage>=7.10.3",
 ]
