--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,10 +2,10 @@
 name = "h2o-sqw-calc"
 version = "0.1.0"
 description = "Add your description here"
-authors = [
-    { name = "Haoran Jiang", email = "jianghr@ihep.ac.cn" },
-]
 readme = "README.md"
+authors = [
+    { name = "Haoran Jiang", email = "jianghr@ihep.ac.cn" }
+]
 requires-python = ">=3.13"
 dependencies = [
     "h5py>=3.14.0",
@@ -14,17 +14,11 @@ dependencies = [
     "scipy>=1.16.1",
 ]
 
-[project.scripts]
-sqw = "h2o_sqw_calc.main:sqw"
-sqw-stack = "h2o_sqw_calc.main:sqw_stack"
-plot-fft = "h2o_sqw_calc.main:plot_fft"
-plot-gamma = "h2o_sqw_calc.main:plot_gamma"
-
 [build-system]
 requires = ["uv_build>=0.8.10,<0.9.0"]
 build-backend = "uv_build"
 
 [dependency-groups]
 dev = [
-    "coverage>=7.10.3",
+    "coverage>=7.10.4",
 ]
