--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,13 @@
 [project]
-name = "h2o-sqw-calc"
+name = "sqw"
 version = "0.1.0"
-description = "Add your description here"
+description = "New methodology for calulation of scattering function S(q,w)"
 readme = "README.md"
 authors = [
     { name = "Haoran Jiang", email = "jianghr@ihep.ac.cn" }
 ]
 requires-python = ">=3.13"
 dependencies = [
-    "h5py>=3.14.0",
-    "matplotlib>=3.10.5",
     "numpy>=2.3.2",
     "scipy>=1.16.1",
 ]
@@ -22,6 +20,10 @@ build-backend = "uv_build"
 dev = [
     "coverage>=7.10.4",
     "ruff>=0.12.9",
+]
+script = [
+    "h5py>=3.14.0",
+    "matplotlib>=3.10.6",
 ]
 
 [tool.ruff]
