chore(devcontainer): add jupyter extension for notebook support in vscode, remove no-needed autodocstring ext.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,8 +39,8 @@
 				"-ms-python.autopep8",
 				"-dbaeumer.vscode-eslint",
 				"charliermarsh.ruff",
-				"njpwerner.autodocstring",
-				"christian-kohler.path-intellisense"
+				"christian-kohler.path-intellisense",
+				"ms-toolsai.jupyter"
 			],
 			"settings": {
 				"[python]": {
