--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,13 @@ dev = [
     "ruff>=0.12.9",
     "sphinx>=8.2.3",
 ]
+notebook = [
+    "h5py>=3.14.0",
+    "ipykernel>=6.30.1",
+    "ipympl>=0.9.8",
+    "matplotlib>=3.10.6",
+    "nbformat>=5.10.4",
+]
 script = [
     "h5py>=3.14.0",
     "matplotlib>=3.10.6",
@@ -44,6 +51,9 @@ select = [
     "C90",  # mccabe
     "NPY",  # NumPy-specific rules
 ]
+
+[tool.ruff.lint.per-file-ignores]
+"*.ipynb" = [ "F821" ]
 
 [tool.ruff.format]
 docstring-code-format = true
