--- a/.gitattributes
+++ b/.gitattributes
@@ -1,12 +1,9 @@
 # Common settings that generally should always be used with your language specific settings
-
 # Auto detect text files and perform LF normalization
 *          text=auto
-
 #
 # The above will handle all files NOT found below
 #
-
 # Documents
 *.bibtex   text diff=bibtex
 *.doc      diff=astextplain
@@ -31,7 +28,6 @@
 *.txt      text
 *.sql      text
 *.epub     diff=astextplain
-
 # Graphics
 *.png      binary
 *.jpg      binary
@@ -46,7 +42,6 @@
 # use the following line instead.
 # *.svg    binary
 *.eps      binary
-
 # Scripts
 *.bash     text eol=lf
 *.fish     text eol=lf
@@ -57,14 +52,12 @@
 *.bat      text eol=crlf
 *.cmd      text eol=crlf
 *.ps1      text eol=crlf
-
 # Serialisation
 *.json     text
 *.toml     text
 *.xml      text
 *.yaml     text
 *.yml      text
-
 # Archives
 *.7z       binary
 *.bz       binary
@@ -85,21 +78,16 @@
 *.Z        binary
 *.zip      binary
 *.zst      binary
-
 # Text files where line endings should be preserved
 *.patch    -text
-
 #
 # Exclude files from exporting
 #
-
 .gitattributes export-ignore
 .gitignore     export-ignore
 .gitkeep       export-ignore
-
 ################################################################################
 # Basic .gitattributes for a python repo.
-
 # Source files
 # ============
 *.pxd    text diff=python
@@ -109,7 +97,6 @@
 *.pyx    text diff=python
 *.pyz    text diff=python
 *.pyi    text diff=python
-
 # Binary files
 # ============
 *.db     binary
@@ -119,11 +106,10 @@
 *.pyc    binary export-ignore
 *.pyo    binary export-ignore
 *.pyd    binary
-
 # Jupyter notebook
 *.ipynb  text eol=lf
-
 # Note: .db, .p, and .pkl files are associated
 # with the python modules ``pickle``, ``dbm.*``,
 # ``shelve``, ``marshal``, ``anydbm``, & ``bsddb``
 # (among others).
+data/** filter=lfs diff=lfs merge=lfs -text
