feat(vdos2gamma.py): move project script `vdos2gamma.py` as python package CLI entry point
This commit introduces a new optional dependency
group `vdos2gamma` in `pyproject.toml` for the
project script `vdos2gamma.py`, allowing users to
install it separately when needed. The script has
been relocated from the `scripts/` directory to
the `src/sqw/` package, enhancing its integration
with the project's codebase.

The filon source code has been organized into a
dedicated `src/filon/` directory, complete with
its own `CMakeLists.txt` for better modularity and
maintainability.

--- a/.gitignore
+++ b/.gitignore
@@ -511,8 +511,10 @@ __marimo__/
 
 ################################ Custom Ignores ###############################
 
-# track libfilon.so, required for scripts/vdos2gamma.py
-!scripts/libfilon.so
+# track pre-compiled filon extension modules
+!src/sqw/_filon/*.so
+!src/sqw/_filon/*.dll
+!src/sqw/_filon/*.dylib
 
 # calculated result data
 data/molecular_dynamics/*_gamma.h5
