--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,12 @@ dependencies = [
     "numpy>=2.3.2",
     "scipy>=1.16.1",
 ]
+scripts = { "vdos2gamma" = "sqw.vdos2gamma:main" }
+
+[project.optional-dependencies]
+vdos2gamma = [
+    "h5py>=3.14.0",
+]
 
 [build-system]
 requires = ["uv_build>=0.8.10,<0.9.0"]
