fix(build-filon.yml): allow CI to trigger on ci_test branch

--- a/.github/workflows/build-filon.yml
+++ b/.github/workflows/build-filon.yml
@@ -2,7 +2,7 @@ name: build-filon
 
 on:
   push:
-    branches: [main, master]
+    branches: [main, master, ci_test]
   pull_request:
   workflow_dispatch:
 
